# lemon

./: .gitignore  README.md  lemon.cabal  stack.yaml
src/: Lemon.hs
src/Lemon/: AST.hs  Compiler.hs  Erlish.hs  Interpreter.hs  Lint.hs  Parser.hs  Util.hs
src/Lemon/Backend/: CoreErlang.hs
src/Lemon/Effect/: Gensym.hs  Stack.hs
src/Lemon/Erlish/: Abstract.hs  Bif.hs  Data.hs  Macro.hs  Monad.hs  Prim.hs
